--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    {% include 'fragments/navbar.html' %}
+    <!-- {% include 'fragments/navbar.html' %} -->
     <!-- {% include 'fragments/messages.html' %} -->
     {% block body %}{% endblock body %}
 </body>
