--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -47,14 +47,25 @@
                 <div>
                     <label for="id_login" class="sr-only">Email address</label>
                     <input id="id_login" name="login" type="email" autocomplete="email" required
-                        class="appearance-none rounded-lg relative block w-full px-3 py-2 border border-border bg-background text-copy-primary placeholder-copy-secondary focus:outline-none focus:ring-2 focus:ring-cta focus:border-transparent"
+                        class="appearance-none rounded-lg relative block w-full px-3 py-2 border border-border bg-background text-copy-primary placeholder-copy-secondary focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
                         placeholder="Email address">
                 </div>
-                <div>
+                <div class="relative">
                     <label for="id_password" class="sr-only">Password</label>
                     <input id="id_password" name="password" type="password" autocomplete="current-password" required
-                        class="appearance-none rounded-lg relative block w-full px-3 py-2 border border-border bg-background text-copy-primary placeholder-copy-secondary focus:outline-none focus:ring-2 focus:ring-cta focus:border-transparent"
+                        class="appearance-none rounded-lg relative block w-full px-3 py-2 border border-border bg-background text-copy-primary placeholder-copy-secondary focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
                         placeholder="Password">
+                        <button type="button" id="togglePassword" class="absolute inset-y-0 right-0 flex items-center px-3">
+                            <svg id="passwordVisible" class="h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                            </svg>
+                            <svg id="passwordHidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 text-gray-500 hidden">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.5 12c1.7 4.5 5.9 7.5 9.5 7.5s7.8-3 9.5-7.5c-1.7-4.5-5.9-7.5-9.5-7.5S4.2 7.5 2.5 12z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12c0 1.7 1.3 3 3 3s3-1.3 3-3-1.3-3-3-3-3 1.3-3 3z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3l18 18" />
+                            </svg>
+                        </button>
                 </div>
             </div>
 
@@ -77,14 +88,6 @@
             <div>
                 <button type="submit"
                     class="group relative w-full flex justify-center py-2 px-4 border border-transparent rounded-md text-white bg-blue-600 hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cta">
-                    <!-- <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <svg class="h-5 w-5 text-blue-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                            fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </span> -->
                     Sign in
                 </button>
             </div>
@@ -98,4 +101,18 @@
         </p>
     </div>
 </div>
+
+<script>
+    const togglePassword = document.getElementById('togglePassword');
+    const passwordInput = document.getElementById('id_password');
+    const passwordVisible = document.getElementById('passwordVisible');
+    const passwordHidden = document.getElementById('passwordHidden');
+
+    togglePassword.addEventListener('click', () => {
+        const isPasswordVisible = passwordInput.type === 'text';
+        passwordInput.type = isPasswordVisible ? 'password' : 'text';
+        passwordVisible.classList.toggle('hidden', !isPasswordVisible);
+        passwordHidden.classList.toggle('hidden', isPasswordVisible);
+    });
+</script>
 {% endblock %}
